--- a/PowerApp/Src/Pruebas Marcos.fx.yaml
+++ b/PowerApp/Src/Pruebas Marcos.fx.yaml
@@ -1,41 +1,7 @@
 "'Pruebas Marcos' As screen":
-    Fill: |-
-        =ColorValue("#DCDCDC")
     LoadingSpinnerColor: =RGBA(0, 120, 212, 1)
 
-    Image5 As image:
-        BorderColor: =RGBA(0, 0, 0, 0)
-        BorderStyle: =BorderStyle.None
-        BorderThickness: =2
-        DisabledBorderColor: =RGBA(0, 0, 0, 0)
-        DisabledFill: =RGBA(0, 0, 0, 0)
-        FocusedBorderThickness: =4
-        Height: =768
-        HoverBorderColor: =RGBA(0, 0, 0, 0)
-        HoverFill: =RGBA(0, 0, 0, 0)
-        Image: =Torito
-        ImagePosition: =ImagePosition.Fill
-        PressedBorderColor: =RGBA(0, 0, 0, 0)
-        PressedFill: =RGBA(0, 0, 0, 0)
-        Width: =1366
-        ZIndex: =1
-
-    Rectangle3 As rectangle:
-        AccessibleLabel: =
-        BorderColor: =RGBA(0, 0, 0, 0)
-        BorderStyle: =BorderStyle.None
-        BorderThickness: =2
-        DisabledFill: =RGBA(161, 159, 157, 1)
-        Fill: =RGBA(0,0,0,0.3)
-        FocusedBorderThickness: =4
-        Height: =683
-        HoverFill: =RGBA(0, 0, 0, 0.3)
-        PressedFill: =
-        Width: =1366
-        Y: =85
-        ZIndex: =2
-
-    Rectangle1 As rectangle:
+    Rectangle1_1 As rectangle:
         BorderColor: =RGBA(0, 0, 0, 0)
         BorderStyle: =BorderStyle.None
         BorderThickness: =2
@@ -46,9 +12,9 @@
             =ColorValue("#0099CC")
         PressedFill: =RGBA(0, 120, 212, 1)
         Width: =1366
-        ZIndex: =3
+        ZIndex: =1
 
-    Image3 As image:
+    Image3_1 As image:
         BorderColor: =RGBA(0, 0, 0, 0)
         BorderStyle: =BorderStyle.None
         BorderThickness: =2
@@ -64,46 +30,9 @@
         Width: =304
         X: =125
         Y: =15
-        ZIndex: =4
+        ZIndex: =2
 
-    Label1 As label:
-        BorderColor: =RGBA(0, 0, 0, 0)
-        BorderStyle: =BorderStyle.None
-        BorderThickness: =2
-        Color: |-
-            =ColorValue("#FFFFFF")
-        DisabledBorderColor: =RGBA(0, 0, 0, 0)
-        DisabledColor: =RGBA(161, 159, 157, 1)
-        FocusedBorderThickness: =4
-        Font: =Font.Verdana
-        Height: =90
-        Size: =56
-        Text: ="¡BIENVENID@!"
-        Width: =580
-        X: =384
-        Y: =125
-        ZIndex: =5
-
-    Label1_1 As label:
-        Align: =Align.Center
-        BorderColor: =RGBA(0, 0, 0, 0)
-        BorderStyle: =BorderStyle.None
-        BorderThickness: =2
-        Color: |-
-            =ColorValue("#FFFFFF")
-        DisabledBorderColor: =RGBA(0, 0, 0, 0)
-        DisabledColor: =RGBA(161, 159, 157, 1)
-        FocusedBorderThickness: =4
-        Font: =Font.Verdana
-        Height: =161
-        Size: =56
-        Text: =User().FullName
-        Width: =670
-        X: =348
-        Y: =243
-        ZIndex: =6
-
-    Button1_2 As button:
+    Button1_6 As button:
         BorderColor: =RGBA(238,40,122,1)
         BorderStyle: |+
             =BorderStyle.Solid
@@ -130,9 +59,9 @@
         Text: ="GESTIONAR KR"
         X: =505
         Y: =30
-        ZIndex: =9
+        ZIndex: =3
 
-    Button1_3 As button:
+    Button1_7 As button:
         BorderColor: =RGBA(238,40,122,1)
         BorderStyle: |+
             =BorderStyle.Solid
@@ -159,9 +88,9 @@
         Text: ="KANBAN"
         X: =694
         Y: =30
-        ZIndex: =10
+        ZIndex: =4
 
-    Button1_4 As button:
+    Button1_8 As button:
         BorderColor: =RGBA(238,40,122,1)
         BorderStyle: |+
             =BorderStyle.Solid
@@ -188,9 +117,9 @@
         Text: ="ROADMAP"
         X: =883
         Y: =30
-        ZIndex: =11
+        ZIndex: =5
 
-    Button1_5 As button:
+    Button1_9 As button:
         BorderColor: =RGBA(238,40,122,1)
         BorderStyle: |+
             =BorderStyle.Solid
@@ -217,5 +146,32 @@
         Text: ="POWER BI"
         X: =1081
         Y: =30
-        ZIndex: =12
+        ZIndex: =6
+
+    Rectangle2 As rectangle:
+        BorderColor: =RGBA(0, 0, 0, 0)
+        BorderStyle: =BorderStyle.None
+        BorderThickness: =2
+        DisabledFill: =RGBA(161, 159, 157, 1)
+        Fill: =RGBA(0, 120, 212, 1)
+        FocusedBorderThickness: =4
+        Height: =768
+        HoverFill: =RGBA(0, 120, 212, 1)
+        PressedFill: =RGBA(0, 120, 212, 1)
+        Width: =125
+        ZIndex: =7
+
+    Rectangle2_1 As rectangle:
+        BorderColor: =RGBA(0, 0, 0, 0)
+        BorderStyle: =BorderStyle.None
+        BorderThickness: =2
+        DisabledFill: =RGBA(161, 159, 157, 1)
+        Fill: =RGBA(0, 120, 212, 1)
+        FocusedBorderThickness: =4
+        Height: =768
+        HoverFill: =RGBA(0, 120, 212, 1)
+        PressedFill: =RGBA(0, 120, 212, 1)
+        Width: =125
+        X: =1241
+        ZIndex: =8
 
