--- a/PowerApp/Src/Pruebas Marcos.fx.yaml
+++ b/PowerApp/Src/Pruebas Marcos.fx.yaml
@@ -1607,9 +1607,10 @@
         HoverColor: =Color.White
         HoverFill: |-
             =ColorValue("#EE2C70")
-        OnSelect: |+
-            =SubmitForm(Form2)
-            
+        OnSelect: |
+            =SubmitForm(Form2) +
+            ResetForm(Form2)+ 
+            Navigate(Home, ScreenTransition.Fade)
         PressedBorderColor: =RGBA(0, 69, 120, 1)
         PressedColor: =RGBA(255, 255, 255, 1)
         PressedFill: =RGBA(16, 110, 190, 1)
