--- a/PowerApp/Src/Home.fx.yaml
+++ b/PowerApp/Src/Home.fx.yaml
@@ -118,7 +118,7 @@ Home As screen:
         HoverColor: =Color.White
         HoverFill: |-
             =ColorValue("#EE2C70")
-        OnSelect: =Navigate(Registrar_Kr)
+        OnSelect: =Navigate('Pruebas Marcos')
         PressedBorderColor: =RGBA(0, 69, 120, 1)
         PressedColor: =RGBA(255, 255, 255, 1)
         PressedFill: =RGBA(16, 110, 190, 1)
