--- a/PowerApp/CanvasManifest.json
+++ b/PowerApp/CanvasManifest.json
@@ -143,6 +143,7 @@
     "Power_BI",
     "Lista_Kr",
     "Pruebas Marcos",
-    "Pruebas Jose"
+    "Pruebas Jose",
+    "Pruebas_Marcos_2"
   ]
 }
