--- a/PowerApp/CanvasManifest.json
+++ b/PowerApp/CanvasManifest.json
@@ -144,6 +144,7 @@
     "Lista_Kr",
     "Pruebas Marcos",
     "Pruebas Jose",
-    "Pruebas_Marcos_2"
+    "Pruebas_Marcos_2",
+    "Confirmación"
   ]
 }
